2014-08-29  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/elastix_compose_transf.m: (0.2.1)

	- Transpose affine matrix to match Matlab's tform convention.

	* matlab/ItkToolbox/elastix_compose_transf.m: (0.2.0)

	- Simplify. For the moment, only similarity transforms, but now we
	can convert any elastix affine transform to an affine matrix,
	compose the transforms, and then return a transform with the most
	flexible type of the two.

2014-08-22  Ramon Casero  <rcasero@gmail.com>

	* matlab/CardiacToolbox/blockface_intraframe_reg.m: (0.4.1)

	- 90º Blockface needs a larger value of Scales.

	* Add matlab/ItkToolbox/elastix_compose_transf.m: (0.1.0)
	* Add matlab/test/test_elastix_compose_transf.m: (0.1.0)
	* Add matlab/test/SimilarityTransformExample.mat:

	- elastix_compose_transf Composition of two transforms in elastix
	format.

2014-08-21  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ItkToolbox/elastix_transf_imcoord2.m: (0.1.0)

	- elastix_transf_imcoord Convert 2D pixel coordinates using
	elastix/transformix transform.

	* Move elastix functions to matlab/ItkToolbox:

	- matlab/FiltersToolbox/elastix.m
	- matlab/FiltersToolbox/elastix_read_file2param.m
	- matlab/FiltersToolbox/elastix_read_reg_output.m
	- matlab/FiltersToolbox/elastix_write_param2file.m
	- matlab/FiltersToolbox/transformix.m

2014-08-20  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/smacof.m: (0.1.0)

	- Add opts.Update = 'reduced' for the reduced form of the Guttman
	update proposed by Gasner et al.

	* Rename matlab/CardiacToolbox/blockface_find_frame_shifts.m as
	matlab/CardiacToolbox/blockface_intraframe_reg.m.

	- This function no longer tries to detect jumps, which is more
	complicated, but only do the registration between frames.

	* matlab/CardiacToolbox/blockface_find_frame_shifts.m: (0.4.0)

	- Change translation transform by similarity transform, because in
	some cases, frames shift not by translation but because the camera
	seems to zoom in or out a bit.